added basecode for maps

--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GreenWheels</title>
+    <title>Ladekortet</title>
+    <link rel="stylesheet" href="css/maps.css">
+    <script src="js/maps.js"></script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhn5md-IQq466_wHtA0pnOJNjPoBDikOc&callback=initMap">
+</script>
 </head>
 <body>
-    AIzaSyAhn5md-IQq466_wHtA0pnOJNjPoBDikOc
+    <h1>Ladekort</h1>
+    <!--The div element for the map -->
+    <div id="map"></div>
+
+
+
+
+
+
+    
     
 </body>
 </html>
