--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ladekortet</title>
     <link rel="stylesheet" href="css/maps.css">
     <script src="js/maps.js"></script>
-    <script async defer
+    <script defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhn5md-IQq466_wHtA0pnOJNjPoBDikOc&callback=initMap">
 </script>
 </head>
