--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h1>Ladekort</h1>
     <!--The div element for the map -->
     <div id="map"></div>
+    <button onclick="VisStandere(3)"></button>
 
     
 
