Drop-down menu tilføjelser

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <header>
         <nav>
             <div class="navigation">
-                <button class="link" data-dropdown-button>Anbefalet/Fremhævede</button>
-                <div class="dropdown-menu" data-dropdown>
-
+                <div class="dropdown" data-dropdown>
+                    <button class="link" data-dropdown-button>Anbefalet/Fremhævede</button>
+                    <div class="dropdown-menu">
+                        dropdown content
+                    </div>
                 </div>
                 <button class="link" data-dropdown-button>Læs Videre/ Læs Mere Om/ Udforsk</button>
                 <button class="link" data-dropdown-button>Brugererfaringer</button>
