--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
                     <button class="link" data-dropdown-button>Brugererfaringer</button>
                     <div class="dropdown-menu information-grid">
                         <div class="dropdown-links">
-                            <a href="#" class="link-2">Ladekort</a>
-                            <a href="#" class="link-2">Bil katalog</a>
-                            <a href="#" class="link-2">Lade derhjemme</a>
-                            <a href="#" class="link-2">Fra benzin til el</a>
+                            <a href="#" class="link-2">FAQ</a>
+                            <a href="#" class="link-2">Tips og Tricks</a>
+                            <a href="#" class="link-2">Erfaringer</a>
                         </div>
                     </div>
                 </div>
