--- a/index.html
+++ b/index.html
@@ -99,12 +99,6 @@
                             </a>
                             <a href="#" class="link-2">
                                 <span class="icons">
-                                    <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="M200 692v54q0 12.75-8.625 21.375T170 776h-20q-12.75 0-21.375-8.625T120 746V422l85-256q3-14 15.4-22t27.6-8h464q15.2 0 27.6 8 12.4 8 15.4 22l85 256v324q0 12.75-8.625 21.375T810 776h-21q-12.75 0-21.375-8.625T759 746v-54H200Zm3-330h554l-55-166H258l-55 166Zm-23 60v210-210Zm105.765 160Q309 582 324.5 566.25T340 528q0-23.333-15.75-39.667Q308.5 472 286 472q-23.333 0-39.667 16.265Q230 504.529 230 527.765 230 551 246.265 566.5q16.264 15.5 39.5 15.5ZM675 582q23.333 0 39.667-15.75Q731 550.5 731 528q0-23.333-16.265-39.667Q698.471 472 675.235 472 652 472 636.5 488.265q-15.5 16.264-15.5 39.5Q621 551 636.75 566.5T675 582Zm-159 434L292 898h148v-76l228 114H516v80ZM180 632h600V422H180v210Z"/></svg>
-                                </span>
-                                Brugte elbiler
-                            </a>
-                            <a href="#" class="link-2">
-                                <span class="icons">
                                     <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="M450 976V856H160v-60h640v60H510v120h-60ZM325.175 553q12.825 0 21.325-8.675 8.5-8.676 8.5-21.5 0-12.825-8.675-21.325-8.676-8.5-21.5-8.5-12.825 0-21.325 8.675-8.5 8.676-8.5 21.5 0 12.825 8.675 21.325 8.676 8.5 21.5 8.5Zm310 0q12.825 0 21.325-8.675 8.5-8.676 8.5-21.5 0-12.825-8.675-21.325-8.676-8.5-21.5-8.5-12.825 0-21.325 8.675-8.5 8.676-8.5 21.5 0 12.825 8.675 21.325 8.676 8.5 21.5 8.5ZM200 440l66-192q5-14 16.5-23t25.5-9h344q14 0 25.5 9t16.5 23l66 192v272q0 10.5-6.75 17.25T736 736h-12q-10.5 0-17.25-6.75T700 712v-64H260v64q0 10.5-6.75 17.25T236 736h-12q-10.5 0-17.25-6.75T200 712V440Zm77-42h407l-41-122H317l-40 122Zm-17 60v130-130Zm0 130h440V458H260v130Z"/></svg>
                                 </span>
                                 Service på elbiler
@@ -157,8 +151,12 @@
         </nav>
     </header>
     <section>
+
+    </section>
+    <!--The div element for the map -->
+    <section>
         <div class="header-1"><h1>Ladekort</h1></div>
-        <!--The div element for the map -->
+        
         <div id="map"></div>
         <button onclick="VisStandere(0)" class="map-button">Alle</button>
         <button onclick="VisStandere(1)" class="map-button">Normal</button>
