--- a/index.html
+++ b/index.html
@@ -151,7 +151,138 @@
         </nav>
     </header>
     <section>
-
+        <table>
+            <tr>
+                <th>Fremhævede</th>
+                <th>Udforsk</th>
+                <th>Brugererfaringer</th>
+            </tr>
+            <tr>
+                <td>
+                    <a href="#" class="link-2">
+                        <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="m612 936-263-93-179 71q-17 9-33.5-1T120 883V325q0-13 7.5-23t19.5-15l202-71 263 92 178-71q17-8 33.5 1.5T840 268v565q0 11-7.5 19T814 864l-202 72Zm-34-75V356l-196-66v505l196 66Zm60 0 142-47V302l-142 54v505Zm-458-12 142-54V290l-142 47v512Zm458-493v505-505Zm-316-66v505-505Z"/></svg>
+                        Ladekort
+                    </a>
+                </td>
+                <td>
+                    <a href="#" class="link-2">
+                        <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="M540 636q-50 0-85-35t-35-85q0-50 35-85t85-35q50 0 85 35t35 85q0 50-35 85t-85 35ZM220 776q-24.75 0-42.375-17.625T160 716V316q0-24.75 17.625-42.375T220 256h640q24.75 0 42.375 17.625T920 316v400q0 24.75-17.625 42.375T860 776H220Zm100-60h440q0-42 29-71t71-29V416q-42 0-71-29t-29-71H320q0 42-29 71t-71 29v200q42 0 71 29t29 71Zm480 180H100q-24.75 0-42.375-17.625T40 836V376h60v460h700v60ZM220 716V316v400Z"/></svg>
+                        Priser på elbiler
+                    </a>
+                </td>
+                <td>
+                    <a href="#" class="link-2">
+                        <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="m612 936-263-93-179 71q-17 9-33.5-1T120 883V325q0-13 7.5-23t19.5-15l202-71 263 92 178-71q17-8 33.5 1.5T840 268v565q0 11-7.5 19T814 864l-202 72Zm-34-75V356l-196-66v505l196 66Zm60 0 142-47V302l-142 54v505Zm-458-12 142-54V290l-142 47v512Zm458-493v505-505Zm-316-66v505-505Z"/></svg>
+                        FAQ
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="#" class="link-2">
+                        <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="M200 692v54q0 12.75-8.625 21.375T170 776h-20q-12.75 0-21.375-8.625T120 746V422l85-256q3-14 15.4-22t27.6-8h464q15.2 0 27.6 8 12.4 8 15.4 22l85 256v324q0 12.75-8.625 21.375T810 776h-21q-12.75 0-21.375-8.625T759 746v-54H200Zm3-330h554l-55-166H258l-55 166Zm-23 60v210-210Zm105.765 160Q309 582 324.5 566.25T340 528q0-23.333-15.75-39.667Q308.5 472 286 472q-23.333 0-39.667 16.265Q230 504.529 230 527.765 230 551 246.265 566.5q16.264 15.5 39.5 15.5ZM675 582q23.333 0 39.667-15.75Q731 550.5 731 528q0-23.333-16.265-39.667Q698.471 472 675.235 472 652 472 636.5 488.265q-15.5 16.264-15.5 39.5Q621 551 636.75 566.5T675 582Zm-159 434L292 898h148v-76l228 114H516v80ZM180 632h600V422H180v210Z"/></svg>
+                        Bil katalog
+                    </a>
+                </td>
+                <td>
+                    <a href="#" class="link-2">
+                        <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="m122 816-42-42 219-219q32-32 78-32t78 32l46 46q15 15 35.5 15t35.5-15l205-205H660v-60h220v220h-60V439L614 644q-32 32-78 32t-78-32l-47-47q-14-14-35-14t-35 14L122 816Z"/></svg>
+                        Rækkevidde
+                    </a>
+                </td>
+                <td>
+                    <a href="#" class="link-2">
+                        <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="m612 936-263-93-179 71q-17 9-33.5-1T120 883V325q0-13 7.5-23t19.5-15l202-71 263 92 178-71q17-8 33.5 1.5T840 268v565q0 11-7.5 19T814 864l-202 72Zm-34-75V356l-196-66v505l196 66Zm60 0 142-47V302l-142 54v505Zm-458-12 142-54V290l-142 47v512Zm458-493v505-505Zm-316-66v505-505Z"/></svg>
+                        Tips og Tricks
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="#" class="link-2">
+                        <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="m337 842 88-140h-53V597l-87 140h52v105ZM220 504h269V276H220v228Zm0 372h269V564H220v312Zm-60 60V276q0-24 18-42t42-18h269q24 0 42 18t18 42v288h65q20.714 0 35.357 14.643T664 614v219q0 22 17.5 36.5T722 884q23 0 43-14.5t20-36.5V446h-15q-12.75 0-21.375-8.625T740 416v-90h20v-50h30v50h40v-50h30v50h20v90q0 12.75-8.625 21.375T850 446h-15v386.691Q835 876 801 906t-79.181 30q-44.155 0-75.987-30Q614 876 614 833V614h-65v322H160Zm329-60H220h269Z"/></svg>
+                        Lade derhjemme
+                    </a>
+                </td>
+                <td>
+                    <a href="#" class="link-2">
+                        <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="m385 644 36-115-95-74h116l38-119 37 119h117l-95 74 35 115-94-71-95 71Zm-141 372V712q-45-47-64.5-103T160 496q0-136 92-228t228-92q136 0 228 92t92 228q0 57-19.5 113T716 712v304l-236-79-236 79Zm236-260q109 0 184.5-75.5T740 496q0-109-75.5-184.5T480 236q-109 0-184.5 75.5T220 496q0 109 75.5 184.5T480 756ZM304 932l176-55 176 55V761q-40 29-86 42t-90 13q-44 0-90-13t-86-42v171Zm176-86Z"/></svg>
+                        Garanti
+                    </a>
+                </td>
+                <td>
+                    <a href="#" class="link-2">
+                        <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="m612 936-263-93-179 71q-17 9-33.5-1T120 883V325q0-13 7.5-23t19.5-15l202-71 263 92 178-71q17-8 33.5 1.5T840 268v565q0 11-7.5 19T814 864l-202 72Zm-34-75V356l-196-66v505l196 66Zm60 0 142-47V302l-142 54v505Zm-458-12 142-54V290l-142 47v512Zm458-493v505-505Zm-316-66v505-505Z"/></svg>
+                        Erfaringer
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="#" class="link-2">
+                        <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="m317 896-42-42 121-121H80v-60h316L275 552l42-42 193 193-193 193Zm326-254L450 449l193-193 42 42-121 121h316v60H564l121 121-42 42Z"/></svg>
+                        Fra benzin til el
+                    </a>
+                </td>
+                                <td>
+                    <a href="#" class="link-2">
+                        <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="m460 816 100-240h-60V416L400 656h60v160ZM310 976q-12.75 0-21.375-8.625T280 946V270q0-12.75 8.625-21.375T310 240h90v-64h160v64h90q12.75 0 21.375 8.625T680 270v676q0 12.75-8.625 21.375T650 976H310Zm30-60h280V300H340v616Zm0 0h280-280Z"/></svg>
+                        Batterityper
+                    </a>
+                </td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>
+                    <a href="#" class="link-2">
+                        <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="M290 606h60V466h-60v140Zm160 160h60v-30.345Q510 722 501.75 714q-8.25-8-21.75-8t-21.75 8.25Q450 722.5 450 736v30Zm160-160h60V466h-60v140ZM480.266 976q-82.734 0-155.5-31.5t-127.266-86q-54.5-54.5-86-127.341Q80 658.319 80 575.5q0-82.819 31.5-155.659Q143 347 197.5 293t127.341-85.5Q397.681 176 480.5 176q82.819 0 155.659 31.5Q709 239 763 293t85.5 127Q880 493 880 575.734q0 82.734-31.5 155.5T763 858.316q-54 54.316-127 86Q563 976 480.266 976Zm.234-60Q622 916 721 816.5t99-241Q820 434 721.188 335 622.375 236 480 236q-141 0-240.5 98.812Q140 433.625 140 576q0 141 99.5 240.5t241 99.5Zm-.5-340Z"/></svg>
+                        Stiktyper
+                    </a>
+                </td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>
+                    <a href="#" class="link-2">
+                        <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="m393 891 279-335H492l36-286-253 366h154l-36 255Zm-73 85 40-280H160l360-520h80l-40 320h240L400 976h-80Zm153-395Z"/></svg>
+                        Ladehastighed
+                    </a>
+                </td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>
+                    <a href="#" class="link-2">
+                        <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="M450 976V856H160v-60h640v60H510v120h-60ZM325.175 553q12.825 0 21.325-8.675 8.5-8.676 8.5-21.5 0-12.825-8.675-21.325-8.676-8.5-21.5-8.5-12.825 0-21.325 8.675-8.5 8.676-8.5 21.5 0 12.825 8.675 21.325 8.676 8.5 21.5 8.5Zm310 0q12.825 0 21.325-8.675 8.5-8.676 8.5-21.5 0-12.825-8.675-21.325-8.676-8.5-21.5-8.5-12.825 0-21.325 8.675-8.5 8.676-8.5 21.5 0 12.825 8.675 21.325 8.676 8.5 21.5 8.5ZM200 440l66-192q5-14 16.5-23t25.5-9h344q14 0 25.5 9t16.5 23l66 192v272q0 10.5-6.75 17.25T736 736h-12q-10.5 0-17.25-6.75T700 712v-64H260v64q0 10.5-6.75 17.25T236 736h-12q-10.5 0-17.25-6.75T200 712V440Zm77-42h407l-41-122H317l-40 122Zm-17 60v130-130Zm0 130h440V458H260v130Z"/></svg>
+                        Service på elbiler
+                    </a>
+                </td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>
+                    <a href="#" class="link-2">
+                        <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="M430 1016q0-25 17.625-42.5T490 956V731q-15-4-28-10.5T438 703l-88 55q-14 9-30.5 11t-33.5-3l-180-51q-29-8-47.5-32.5T40 627q0-38 26.5-64.5T131 536h301q10-11 22-19t26-13V367q0-17 6.5-32t18.5-26l137-128q23-22 53.5-25.5T752 169q32 19.948 41.5 56.354T783 293.678L623 556q8 13 11.5 27t4.5 29l108 26q17 4 29.5 14t20.5 24l91 164q15 27 11 57t-26 52q-27 27-64.5 27T744 949L550 755v201q25 0 42.5 17.625T610 1016H430ZM160 286v-60h240v60H160Zm380 72v141q11 2 21.5 6t19.5 9l151-252q7-11 3.5-24T720 219.5q-9-5.5-19.5-4T683 224L540 358ZM40 446v-60h200v60H40Zm480 230q25.5 0 42.75-17.25T580 616q0-25.5-17.25-42.75T520 556q-25.5 0-42.75 17.25T460 616q0 25.5 17.25 42.75T520 676Zm-208 36 95-58q-5-14-5.5-29t1.5-29H131q-13 0-22 9t-9 22.333Q100 638 106 646q6 8 16 11l190 55Zm429-15-115-26q-6 12-15 22.5T591 712l196 195q9 9 22 9t22-9q8.25-8.4 9.625-18.2Q842 879 837 870l-96-173ZM120 926v-60h200v60H120Zm400-310Zm61-102Zm-178 82Zm188 116Z"/></svg>
+                        Strømkilder
+                    </a>
+                </td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>
+                    <a href="#" class="link-2">
+                        <svg class="icons-table" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 96 960 960" width="48"><path d="M878 1016 758 896q-21 17-46.5 23.5T660 926q-70.833 0-120.417-49.618Q490 826.765 490 755.882 490 685 539.618 635.5q49.617-49.5 120.5-49.5Q731 586 780.5 635.583 830 685.167 830 756q0 26-6.5 52T800 854l120 120-42 42ZM659.859 866Q706 866 738 834.141q32-31.859 32-78T738.141 678q-31.859-32-78-32T582 677.859q-32 31.859-32 78T581.859 834q31.859 32 78 32ZM840 526h-60V276h-60v90H240v-90h-60v600h250v60H180q-26 0-43-17t-17-43V276q0-26 17-43t43-17h202q7-35 34.5-57.5T480 136q36 0 63.5 22.5T578 216h202q26 0 43 17t17 43v250ZM480 276q17 0 28.5-11.5T520 236q0-17-11.5-28.5T480 196q-17 0-28.5 11.5T440 236q0 17 11.5 28.5T480 276Z"/></svg>
+                        WLTP
+                    </a>
+                </td>
+                <td></td>
+            </tr>
+        </table>
     </section>
     <!--The div element for the map -->
     <section>
