--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ladekortet</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/maps.css">
     <script src="js/maps.js"></script>
     <script defer
@@ -17,7 +20,7 @@
         <nav>
             <div class="navigation">
                 <div class="dropdown" data-dropdown>
-                    <button class="link" data-dropdown-button>Anbefalet/Fremhævede</button>
+                    <button class="link" data-dropdown-button>Anbefalede</button>
                     <div class="dropdown-menu information-grid">
                         <div class="dropdown-links">
                             <div>
@@ -52,7 +55,7 @@
                     </div>
                 </div>
                 <div class="dropdown" data-dropdown>
-                    <button class="link" data-dropdown-button>Læs Videre/ Læs Mere Om/ Udforsk</button>
+                    <button class="link" data-dropdown-button>Læs mere om</button>
                     <div class="dropdown-menu information-grid">
                         <div class="dropdown-links">
                             <div>
