--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <header>
         <nav>
             <div class="navigation">
+                <div>
+                    <h1 class="logo"><span class="logo-green">Green</span>Wheels</h1>
+                </div>
                 <div class="dropdown" data-dropdown>
                     <button class="link" data-dropdown-button>Anbefalede</button>
                     <div class="dropdown-menu information-grid">
