--- a/index.html
+++ b/index.html
@@ -169,7 +169,12 @@
         </nav>
     </header>
     <main>
-        <table>
+        <div class="content-container-grid">
+            <div class="content-grid-container grid-col-span-2">
+                <h2 class="headline-tekst">Her ses en meget sej tekst som skal lyde rigtig fedt og bare se mega godt ud</h2>
+            </div>
+            <div class="content-grid-container">
+                        <table>
             <tr>
                 <th>Fremhævede</th>
                 <th>Udforsk</th>
@@ -301,6 +306,9 @@
                 <td></td>
             </tr>
         </table>
+            </div>
+        </div>
+
 
         <!--The div element for the map -->
 
