--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </nav>
     </header>
     <main>
-        <div class="content-container">
+        <div class="table-container">
             <div class="content">
                 <h2 class="content-headline">Her ses en meget sej tekst som skal lyde rigtig fedt og bare se mega godt ud</h2>
             </div>
@@ -313,7 +313,7 @@
         </div>
 
 
-        <!--The div element for the map -->
+        
         <div class="map-container">
             <div>
                 <h2 class="header-1">Ladekort</h2>
