Energifyn Card næsten færdig

--- a/index.html
+++ b/index.html
@@ -350,29 +350,33 @@
             </div>
         </div>
         
-        <div>
-            <div class="card-container">
-                <div class="firma-logo">EnergiFyn</div>
-            </div>
-            <div class="card-information-container">
-                <div class="card-content">
-                    <p class="tekst-bold">995 kr ved leje af ladeboks</p>
-                    <p>Oprettelse pris ekskl. standardinstallation</p>
-                    <p>Serviceaftale 19 kr/mdr</p>
-                    <p>Lejeaftale 170 kr/mdr</p>
+        <div class="card-container">
+            <div class="card-flex">
+                <div>
+                    <div class="firma-logo">EnergiFyn</div>
                 </div>
-                <div class="card-content">
-                    <p class="tekst-bold">1.995 kr ved leje af ladeboks</p>
-                    <p>Oprettelse pris inkl. standardinstallation</p>
-                    <p>Serviceaftale 19 kr/mdr</p>
-                    <p>Lejeaftale 170 kr/mdr</p>
-                </div>
-                <div class="card-content">
-                    <p class="tekst-bold">9.500 kr ved køb af ladeboks</p>
-                    <p>Oprettelses pris inkl. standardinstallation</p>
-                    <p>Serviceaftale 19 kr/mdr</p>
-                </div>
-                <button class="card-button">Vælg aftale</button>
+                    <div class="cards-flex-row">
+                        <div class="card-content">
+                            <p class="tekst-bold">995 kr ved leje af ladeboks</p>
+                            <p>Oprettelse pris ekskl. standardinstallation</p>
+                            <p>Serviceaftale 19 kr/mdr</p>
+                            <p>Lejeaftale 170 kr/mdr</p>
+                        </div>
+                        <div class="card-content">
+                            <p class="tekst-bold">1.995 kr ved leje af ladeboks</p>
+                            <p>Oprettelse pris inkl. standardinstallation</p>
+                            <p>Serviceaftale 19 kr/mdr</p>
+                            <p>Lejeaftale 170 kr/mdr</p>
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <p class="tekst-bold">9.500 kr ved køb af ladeboks</p>
+                        <p>Oprettelses pris inkl. standardinstallation</p>
+                        <p>Serviceaftale 19 kr/mdr</p>
+                    </div>
+                    <div class="card-button-container">
+                        <button class="card-button">Vælg aftale</button>
+                    </div>
             </div>
         </div>
         
