--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                         <p>Oprettelses pris inkl. standardinstallation</p>
                         <p>Serviceaftale 19 kr/mdr</p>
                     </div>
-                    <div class="card-button-container">
+                    <div class="">
                         <button class="card-button">Vælg aftale</button>
                     </div>
             </div>
