Added Media quarries for Map

--- a/index.html
+++ b/index.html
@@ -172,11 +172,12 @@
         </nav>
     </header>
     <main>
-        <div class="table-container">
-            <div class="content">
-                <h2 class="content-headline">Her ses en meget sej tekst som skal lyde rigtig fedt og bare se mega godt ud</h2>
-            </div>
-            <div class="content">
+            <div class="table-content-wrapper">
+                <div>
+                    <h2 class="table-content-h2">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                    </h2>
+                </div>
                 <table>
                     <tr>
                         <th>Fremhævede</th>
@@ -310,7 +311,7 @@
                     </tr>
                 </table>
             </div>
-        </div>
+
 
         <div class="om-greenwheels-container">
             <div class="info-grafik-container">
@@ -374,7 +375,7 @@
                         <p>Oprettelses pris inkl. standardinstallation</p>
                         <p>Serviceaftale 19 kr/mdr</p>
                     </div>
-                    <div class="">
+                    <div>
                         <button class="card-button">Vælg aftale</button>
                     </div>
             </div>
