Added media quarry for Menu (90% done)

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <header>
         <nav>
             <div class="navigation">
-                <div>
-                    <h1 class="logo"><span class="logo-green">Green</span>Wheels</h1>
+                <div data-dropdown class="navigation-logo-container">
+                    <h1 data-dropdown-button class="logo"><span class="logo-green">Green</span>Wheels</h1>
                 </div>
                 <div class="dropdown" data-dropdown>
                     <button class="link" data-dropdown-button>Anbefalede</button>
@@ -314,11 +314,11 @@
 
 
         <div class="om-greenwheels-container">
+            <div class="introdoktion-container">
+                <h2 class="greenwheels-introdoktion">Lorem Ipsum er ganske enkelt fyldtekst fra print- og typografiindustrien. Lorem Ipsum har været standard fyldtekst</h2>
+            </div>
             <div class="info-grafik-container">
                 <img class="info-grafik-img" src="img/test.png" alt="Info grafik fra dst">
-            </div>
-            <div class="introdoktion-container">
-                <h2 class="greenwheels-introdoktion">Introduktion til hvem GreenWheels er og hvad de gør</h2>
             </div>
         </div>
         
