--- a/index.html
+++ b/index.html
@@ -380,7 +380,54 @@
                     </div>
             </div>
         </div>
-        
+
+        <div class="ok-card-container">
+            <div class="ok-content-row">
+                <div>
+                    <div class="ok-content-column">
+                        <p class="tekst-bold">995 kr ved leje af ladeboks med aftale</p>
+                        <p>Leje og serviceaftale 199 kr/md</p>
+                        <p>Elafgiftsrefusion 87 øre/kWh</p>
+                    </div>
+                    <div class="ok-content-column">
+                        <p class="tekst-bold">2.995 kr ved leje af ladeboks uden aftale</p>
+                        <p>Leje og serviceaftale 249 kr/md</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        <div class="card-container">
+            <div class="card-flex-ok">
+                <div>
+                    <div class="firma-logo">OK</div>
+                </div>
+                <div class="cards-flex-column-row">
+                    <div class="card-content-ok">
+
+                    </div>
+                    <div class="card-content-ok">
+
+                    </div>
+                </div>
+                <div>
+                    <button class="card-button">Vælg aftale</button>
+                </div>
+                <div>
+                    <div class="card-content-ok">
+                        <p class="tekst-bold">9.995 kr ved køb af ladeboks med aftale</p>
+                        <p>Serviceaftale 79 kr/md</p>
+                        <p>Elafgiftsrefusion 87 øre/kWh</p>
+                    </div>
+                    <div class="card-content-ok">
+                        <p class="tekst-bold">11.995 kr ved køb af ladeboks uden aftale</p>
+                        <p>Leje og serviceaftale 249 kr/md</p>
+                    </div>
+                </div>
+                <div>
+                    <button class="card-button">Vælg aftale</button>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footer-container">
