added custom css for ok buttons

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                             <p>Leje og serviceaftale 249 kr/md</p>
                         </div>
                         <div>
-                            <button class="card-button">Vælg aftale</button>
+                            <button class="card-button-ok">Vælg aftale</button>
                         </div>
                     </div>
                     <div class="ok-content-row">
@@ -412,7 +412,7 @@
                             <p>Leje og serviceaftale 249 kr/md</p>
                         </div>
                         <div>
-                            <button class="card-button">Vælg aftale</button>
+                            <button class="card-button-ok">Vælg aftale</button>
                         </div>
                     <div>
                 </div>
