--- a/index.html
+++ b/index.html
@@ -257,6 +257,13 @@
                 </div>
             </div>
         </div>
+        <div class="heading-container">
+            <div class="heading-content">
+                <h2>
+                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC,
+                </h2>
+            </div>
+        </div>
     </div>
 
 
@@ -331,43 +338,42 @@
             </div>
         </div>
 
+
+    
         <div class="ok-card-container">
             <div class="ok-flex">
-                <div class="logo-container">
-                    <div class="firma-logo">OK</div>
-                </div>
-                <div class="ok-content-row-container">
-                    <div class="ok-content-row">
-                        <div class="ok-content-column">
-                            <p class="tekst-bold">995 kr ved leje af ladeboks med aftale</p>
-                            <p>Leje og serviceaftale 199 kr/md</p>
-                            <p>Elafgiftsrefusion 87 øre/kWh</p>
-                        </div>
-                        <div class="ok-content-column">
-                            <p class="tekst-bold">2.995 kr ved leje af ladeboks uden aftale</p>
-                            <p>Leje og serviceaftale 249 kr/md</p>
-                        </div>
-                        <div>
-                            <button class="card-button-ok">Vælg aftale</button>
+                <div>
+                    <div class="ok-content-row-container">
+                        <div class="ok-content-row">
+                            <div class="ok-content-column">
+                                <p class="tekst-bold">995 kr ved leje af ladeboks med aftale</p>
+                                <p>Leje og serviceaftale 199 kr/md</p>
+                                <p>Elafgiftsrefusion 87 øre/kWh</p>
+                            </div>
+                            <div class="ok-content-column">
+                                <p class="tekst-bold">2.995 kr ved leje af ladeboks uden aftale</p>
+                                <p>Leje og serviceaftale 249 kr/md</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="ok-content-row">
-                        <div class="ok-content-column">
-                            <p class="tekst-bold">9.995 kr ved køb af ladeboks med aftale</p>
-                            <p>Serviceaftale 79 kr/md</p>
-                            <p>Elafgiftsrefusion 87 øre/kWh</p>
-                        </div>
-                        <div class="ok-content-column">
-                            <p class="tekst-bold">11.995 kr ved køb af ladeboks uden aftale</p>
-                            <p>Leje og serviceaftale 249 kr/md</p>
-                        </div>
-                        <div>
-                            <button class="card-button-ok">Vælg aftale</button>
-                        </div>
                     <div>
+                        <button class="card-button-ok">Vælg aftale</button>
+                    </div>
                 </div>
             </div>
-        </div>
+            <div class="ok-content-row">
+                <div class="ok-content-column">
+                    <p class="tekst-bold">9.995 kr ved køb af ladeboks med aftale</p>
+                    <p>Serviceaftale 79 kr/md</p>
+                    <p>Elafgiftsrefusion 87 øre/kWh</p>
+                </div>
+                <div class="ok-content-column">
+                    <p class="tekst-bold">11.995 kr ved køb af ladeboks uden aftale</p>
+                    <p>Leje og serviceaftale 249 kr/md</p>
+                </div>
+                <div>
+                    <button class="card-button-ok">Vælg aftale</button>
+                </div>
     </main>
     <footer>
         <div class="footer-container">
