--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <h2 class="greenwheels-introdoktion">Lorem Ipsum er ganske enkelt fyldtekst fra print- og typografiindustrien. Lorem Ipsum har været standard fyldtekst</h2>
             </div>
             <div class="info-grafik-container">
-                <img class="info-grafik-img" src="img/test.png" alt="Info grafik fra dst">
+                <img class="info-grafik-img" src="img/Info-grafik-1.jpg" alt="Info grafik fra dst">
             </div>
         </div>
         
