added Clever card, ikke færdig

--- a/index.html
+++ b/index.html
@@ -516,6 +516,43 @@
             </div>
         </div>
 
+        <div class="ok-card-container">
+            <div class="ok-flex-row green">
+                <div>
+                    <div class="firma-logo">CLEVER</div>
+                </div>
+                <div class="ok-content-row-container">
+                    <div>
+                        <div class="ok-content-box">
+                            <p class="tekst-bold">10.999 kr ved køb af ladeboks med aftale</p>
+                            <p class="p-content-max-width">Få rabat på serviceaftalen, og strøm til indkøbspris
+                                har du solceller eller elvarme,
+                                skal du vælge denne løsning</p>
+                        </div>
+                        <div class="ok-content-box">
+                            <p>pris inkl. indstallation</p>
+                            <p>Serviceaftale 80 kr/md</p>
+                            <p>CLEVER Power elaftale 49 kr/md</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="ok-content-box">
+                            <p class="tekst-bold">10.999 kr ved køb af ladeboks uden aftale</p>
+                            <p>Vælg denne læsning hvis du ikke vil skifte elselskab</p>
+                            <p>Du kan altid skifte mening senere hen</p>
+                        </div>
+                        <div class="ok-content-box">
+                            <p>Pris inkl. installation</p>
+                            <p>Serviceaftale 119 kr/md</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <button class="card-button">Vælg aftale</button>
+                </div>
+            </div>
+        </div>
+
 
     </main>
     <footer>
