--- a/index.html
+++ b/index.html
@@ -525,12 +525,12 @@
                     <div>
                         <div class="ok-content-box">
                             <p class="tekst-bold">10.999 kr ved køb af ladeboks med aftale</p>
-                            <p class="p-content-max-width">Få rabat på serviceaftalen, og strøm til indkøbspris
-                                har du solceller eller elvarme,
-                                skal du vælge denne løsning</p>
+                            <p>Få rabat på serviceaftalen, og strøm til indkøbspris</p>
+                            <p>Har du solceller eller elvarme,</p>
+                            <p>skal du vælge denne løsning</p> 
                         </div>
                         <div class="ok-content-box">
-                            <p>pris inkl. indstallation</p>
+                            <p>Pris inkl. indstallation</p>
                             <p>Serviceaftale 80 kr/md</p>
                             <p>CLEVER Power elaftale 49 kr/md</p>
                         </div>
@@ -540,10 +540,12 @@
                             <p class="tekst-bold">10.999 kr ved køb af ladeboks uden aftale</p>
                             <p>Vælg denne læsning hvis du ikke vil skifte elselskab</p>
                             <p>Du kan altid skifte mening senere hen</p>
+                            <p>&nbsp</p>
                         </div>
                         <div class="ok-content-box">
                             <p>Pris inkl. installation</p>
                             <p>Serviceaftale 119 kr/md</p>
+                            <p>&nbsp</p>
                         </div>
                     </div>
                 </div>
