--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhn5md-IQq466_wHtA0pnOJNjPoBDikOc&callback=initMap">
         </script>
     <script src="js/dropdown.js" defer></script>
+    <script src="js/box.js" defer></script>
 </head>
 
 <body>
@@ -406,15 +407,31 @@
 
 
 
+        <!-- box.js -->
+
         <div class="om-greenwheels-container">
-            <div class="introdoktion-container">
-                <h2 class="greenwheels-introdoktion">Lorem Ipsum er ganske enkelt fyldtekst fra print- og
+
+            
+            <div class="box show">
+                <div class="introdoktion-container">
+                     <h2 class="greenwheels-introdoktion">Lorem Ipsum er ganske enkelt fyldtekst fra print- og
                     typografiindustrien. Lorem Ipsum har været standard fyldtekst</h2>
+                </div>
             </div>
-            <div class="info-grafik-container">
-                <img class="info-grafik-img" src="img/Info-grafik-1.jpg" alt="Info grafik fra dst">
+            
+            <div class="box show">
+                <div class="info-grafik-container">
+                 <img class="info-grafik-img" src="img/Info-grafik-1.jpg" alt="Info grafik fra dst">
+                </div>
             </div>
+
+
         </div>
+
+ <!-- box.js -->
+
+
+
 
         <div class="map-container">
             <div>
