--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/maps.css">
-    <script src="js/maps.js"></script>
+    <script src="js/maps.js" defer></script>
     <script defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhn5md-IQq466_wHtA0pnOJNjPoBDikOc&callback=initMap">
         </script>
