rettelser html og css

--- a/index.html
+++ b/index.html
@@ -395,10 +395,9 @@
             </div>
             <div class="heading-container">
                 <div class="heading-content">
-                    <h2>
-                        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                        classical Latin literature from 45 BC,
-                    </h2>
+                    <h1>
+                        Vi sikre <span class="heading-span">dit</span> valg
+                    </h1>
                 </div>
             </div>
         </div>
@@ -421,7 +420,7 @@
             
             <div class="box show">
                 <div class="info-grafik-container">
-                 <img class="info-grafik-img" src="img/Info-grafik-1.jpg" alt="Info grafik fra dst">
+                 <img class="info-grafik-img" src="img/Info-grafik-optimeret.jpg" alt="Info grafik fra dst">
                 </div>
             </div>
 
