--- a/information.html
+++ b/information.html
@@ -396,7 +396,7 @@
                     </div>
                     <div>
                         <p class="artikel-indledning">
-                            Der er kommet en del forskellige stiktyper gennem årene, men der er 3 som har en stor overvægt på markedet. De 3 stik er “Type 2” , “CCS-Combo” og “CHAdeMO” men hvad er det lige forskellen på stikkene er.
+                            Der er kommet en del forskellige stiktyper gennem årene, men der er 3 som har en stor overvægt på markedet. De 3 stik er “Type 2” , “CCS-Combo” og “CHAdeMO” men hvad er det lige forskellen på stikkene er?
                         </p>
                     </div>
                     <div class="artikel-flex">
