--- a/information.html
+++ b/information.html
@@ -241,12 +241,12 @@
     </header>
     <main>
 
-        <article>
+        <article id="priser">
             <div class="artikel-container">
                 <div class="artikel-content">
                     <div>
                         <h1 class="artikel-overskrift">
-                            Priser på elbiler
+                            Priser
                         </h1>
                     </div>
                     <div>
@@ -257,16 +257,16 @@
                     <div class="artikel-flex">
                         <p class="artikel-tekst">
                             Med et hurtigt kig kan man se at købsprisen for elbiler er højere end på dens modparter, men elbilens prisfordel ligger i hvor meget billigere den er at bruge frem for hvor meget købsprisen er.
-                            En af de fordele elbiler nyder af er, at der er ingen pålagt afgift for elbiler med en købspris på op til 500.000 kr. Det betyder at hvad det ville koste om året at have elbil er drastisk mindre end andre type biler, 
-                            og med en gennemsnitlig pris for elbiler værende på 248.000kr, er der meget at spare på de månedlige og årlige omkostninger som bilejere. Ifølge FDMs forbrugerøkonomer så vil man kunne betale 100.000kr mere for sin elbil end 
-                            hvad man ville for en benzinbil, og stadig sparer penge ved at købe elbilen.
+                            En af de fordele elbiler nyder af er, at der er ingen pålagt afgift for elbiler med en købspris på op til 500.000 kr. Det betyder at hvad det ville koste om året at have elbil er drastisk mindre end andre type biler, og med en gennemsnitlig pris for elbiler værende på 248.000kr, 
+                            er der meget at spare på de månedlige og årlige omkostninger som bilejere. Ifølge FDMs forbrugerøkonomer så vil man kunne betale 100.000kr mere for sin elbil en hvad man ville for en benzinbil, og stadig sparer penge ved at købe elbilen.
                             Hvis det er den højere købspris, som stopper dig fra at købe en elbil, er der flere banker der tilbyder grønne billån, hvor renterne er lavere end et normalt lån, for at hjælpe flere med i den grønne omstilling.
+                            
                         </p>
                     </div>
                 </div>
             </div>
         </article>
-        <article>
+        <article id="rækkevidde">
             <div class="artikel-container">
                 <div class="artikel-content">
                     <div>
@@ -295,7 +295,7 @@
                 </div>
             </div>
         </article>
-        <article>
+        <article id="garanti">
             <div class="artikel-container">
                 <div class="artikel-content">
                     <div>
@@ -316,7 +316,7 @@
                 </div>
             </div>
         </article>
-        <article>
+        <article id="opladningstid">
             <div class="artikel-container">
                 <div class="artikel-content">
                     <div>
@@ -339,7 +339,7 @@
                 </div>
             </div>
         </article>
-        <article>
+        <article id="batterilevetid">
             <div class="artikel-container">
                 <div class="artikel-content">
                     <div>
@@ -362,7 +362,7 @@
                 </div>
             </div>
         </article>
-        <article>
+        <article id="batterityper">
             <div class="artikel-container">
                 <div class="artikel-content">
                     <div>
@@ -386,7 +386,7 @@
                 </div>
             </div>
         </article>
-        <article>
+        <article id="stiktyper">
             <div class="artikel-container">
                 <div class="artikel-content">
                     <div>
@@ -426,7 +426,7 @@
                 </div>
             </div>
         </article>
-        <article>
+        <article id="vedligeholdelse">
             <div class="artikel-container">
                 <div class="artikel-content">
                     <div>
@@ -451,7 +451,7 @@
                 </div>
             </div>
         </article>
-        <article>
+        <article id="stromkilde">
             <div class="artikel-container">
                 <div class="artikel-content">
                     <div>
@@ -487,7 +487,7 @@
                 </div>
             </div>
         </article>
-        <article>
+        <article id="wltp">
             <div class="artikel-container">
                 <div class="artikel-content">
                     <div>
